# cmake-test

./: README.md
cmake/: CMakeLists.txt
cmake/src/: main.cpp
cmake/src/math/: CMakeLists.txt  math_utils.cpp  math_utils.h
make/: main.cpp  makefile  math_max.cpp  math_max.h  math_min.cpp  math_min.h
make_tutorial/: Makefile
step1/: CMakeLists.txt
